[package]
name = "deno-v8-mre"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
deno_canvas = "0.42.0"
deno_crypto = "0.187.0"
deno_console = "0.173.0"
deno_core = "0.314.2"
deno_fetch = "0.197.0"
deno_fleek = { git = "https://github.com/fleek-network/lightning" }
deno_fs = "0.83.0"
deno_io = "0.83.0"
deno_net = "0.165.0"
deno_node = "0.110.0"
deno_web = "0.204.0"
deno_url = "0.173.0"
deno_webgpu = "0.140.0"
deno_webidl = "0.173.0"
deno_websocket = "0.178.0"
tokio = "1.36.0"
serde_json = "1.0.132"
arrayref = "0.3.9"
tracing = "0.1.40"
hex = "0.4.3"

[build-dependencies]
deno_canvas = "0.42.0"
deno_crypto = "0.187.0"
deno_console = "0.173.0"
deno_core = "0.314.2"
deno_fetch = "0.197.0"
deno_fleek = { git = "https://github.com/fleek-network/lightning" }
deno_fs = "0.83.0"
deno_io = "0.83.0"
deno_net = "0.165.0"
deno_node = "0.110.0"
deno_web = "0.204.0"
deno_url = "0.173.0"
deno_webgpu = "0.140.0"
deno_webidl = "0.173.0"
deno_websocket = "0.178.0"